--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/mockjs": "^1.0.7",
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "mock": "^0.1.1",
+    "mockjs": "^1.1.0",
+    "vant": "^3.6.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -31,6 +36,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "unplugin-vue-components": "^0.22.8"
   }
 }
